tests/error/pointer_outside_class.gw
// [contains] can't declare func pointer static outside of a class
 static typedef void (my_function)(){}
